Micro tab: Increased speed of particle random walks
Micro tab: Work toward ensuring that matching sites are contained within the solution for crystal growing
# 0.00.72 (54586) Jul 28, 2011
Micro tab: Renamed SodiumIonParicle => Sodium, etc.
Micro tab: Prefer crystallization sites that are underwater
Micro tab: Added gradual crystallization for NaCl
Micro tab: Improved generics for ItemList
Micro tab: Fixed: item list doesn't notify when particular items are removed
Micro tab: Removed Component in lattice formation, and improved generics arguments for Lattice and Bond
Micro tab: More support for incremental crystallization
Micro tab: First steps toward crystallizing atoms when past saturation point
# 0.00.71 (54538) Jul 26, 2011
Micro tab: Improved behavior under evaporation
Micro tab: Prevent particles from leaving the beaker to the left or right
Micro tab: Fixed: When evaporating, particles can move up past the surface of the water
Micro tab: Fixed: When evaporating too much, particles can be pushed into the floor of the beaker
Micro tab: Fixed saturation point for NaNO3 and CaCl2
Micro tab: Added Component=>Particle method
Micro tab: Factored out duplicated code in lattice construction
Micro tab: Fixed dissolving for sodium nitrate
Micro tab: Added generic type parameters to Compound and fixed sucrose crystal dissolving
Micro tab: Crystals dissolve faster
Micro tab: Improvements for crystal dissolving
Micro tab: Factored out strategy pattern for crystal dissolving
# 0.00.70 (54480) Jul 25, 2011
Micro tab: Changed kit 1 "sugar" and "salt" to read "sucrose" and "sodium chloride" with formulae as in the other kits
Micro tab: Changed the word "water" to "solution" for the volume readout when there are particles in the water
Micro tab: Moved the beaker left so that it doesn't overlap with the control panels
Micro tab: Added a - sign after NO3 in the bar chart label
Micro tab: Moved the positive ions to the left of the negative ions in the bar chart